# ultralisk

./: .gitignore  Cargo.toml  build.rs  devenv.nix  devenv.yaml  flake.nix
proto/: agent.proto  buf.gen.yaml
scripts/: container-test.sh
src/: config.rs  lib.rs  main.rs
src/api/: connect.rs  mod.rs
src/core/: constants.rs  mod.rs
src/core/interfaces/: event_bus.rs  llm_client.rs  mod.rs  process_manager.rs  storage.rs  timer_manager.rs  tool.rs
src/core/types/: api.rs  event.rs  llm.rs  message.rs  mod.rs  process.rs  session.rs  timer.rs  tool.rs
src/db/: mod.rs  repository.rs  storage.rs
src/db/repositories/: external_tool.rs  file_read.rs  message.rs  mod.rs  process.rs  provider.rs  session.rs  skill.rs  timer.rs  todo.rs  tool_variable.rs
src/db/schema/: external_tools.rs  file_reads.rs  messages.rs  mod.rs  processes.rs  providers.rs  sessions.rs  skill_registries.rs  skills.rs  timers.rs  todos.rs  tool_variables.rs
src/event_bus/: bus.rs
src/external_tools/: command_executor.rs  http_executor.rs  mod.rs
src/file_time/: mod.rs
src/infra/: mod.rs  observable.rs
src/infra/errors/: errors.rs  mod.rs
src/infra/logger/: console_logger.rs  (+2 more)
src/llm_client/: auto_config.rs  client.rs  mod.rs  stream.rs
src/message_bus/: mod.rs
src/process_manager/: executor.rs  manager.rs  mod.rs
src/prompts/: mod.rs
src/service/: compact.rs  mod.rs  skill.rs  tool_executor.rs
src/tools/: apply_patch.rs  batch.rs  edit.rs  glob.rs  grep.rs  job.rs  ls.rs  memory_write.rs  message.rs  mod.rs  multiedit.rs  question.rs  read.rs  registry.rs  skill.rs  task.rs  time_notify.rs  todo.rs  write.rs
