[package]
name = "ultralisk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ConnectRPC - using connectrpc instead of tonic
connectrpc = { version = "0.2", features = ["axum", "client", "server"] }
buffa = { version = "0.2", features = ["json"] }
buffa-types = { version = "0.2", features = ["json"] }

# HTTP types
http = "1"
http-body = "1"
tower = { version = "0.5", features = ["util", "buffer"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
axum = { version = "0.8", features = ["http2"] }

# Database
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-query = "0.32"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Utilities
walkdir = "2"
regex = "1"
url = "2"
dirs = "5"
async-stream = "0.3"
futures-util = "0.3"
bytes = { version = "1", features = ["serde"] }
pin-project = "1"
lazy_static = "1"

[build-dependencies]
connectrpc-build = "0.2"